# engram

./: .gitignore  CHANGELOG.md  README.md  benchmark-results.json  marketplace.json  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE-PROPOSAL.md  ARCHITECTURE.md  DERIVATION-LOG.md  ENGRAM-V2-ARCHITECTURE.md  FAQ.md  KEY-STORAGE-GUIDE.md  MERKLE-INDEX-SPEC.md  SPATIAL-EXTENSION.md  blog-post.md
docs/governance/: ANTI-PATTERNS.md  LAYERED-CONTEXT.md  MEMORY-TYPES.md  PRECEDENCE.md  README.md
docs/governance/schemas/: artifact-mapping.yaml  episode.schema.yaml  fact.schema.yaml  memory-write-policy.yaml
hooks/: hooks.json
myelin8-rs/: Cargo.toml
myelin8-rs/src/: cli.rs  config.rs  index.rs  ingest.rs  integrity.rs  main.rs  mcp.rs  recall.rs  search.rs  store.rs  tiers.rs
sidecar/: Cargo.toml
sidecar/src/: cograph.rs  crypto.rs  keychain.rs  main.rs  merkle.rs
skills/engram/: SKILL.md
skills/tiered-memory/: SKILL.md
src/: audit.py  cli.py  cograph.py  config.py  context.py  context_assembler.py  embeddings.py  encryption.py  engine.py  envelope.py  fileutil.py  governance.py  hybrid_search.py  index_crypto.py  lookup_tables.py  merkle.py  metadata.py  pipeline.py  predictor.py  scanner.py  schema_validator.py  session_parser.py  setup.py  spatial.py  vault.py  vector_index.py  write_policy.py
tests/: benchmark_retrieval.py  test_activation.py  test_context_assembler.py  test_embeddings.py  test_engine.py  test_envelope.py  test_governance.py  test_lookup_tables.py  test_merkle.py  test_spatial.py
