[package]
name = "myelin8"
version = "2.0.0"
edition = "2021"
description = "SIEM-inspired memory engine for AI assistants"
license = "MIT"
authors = ["Kevin Qi <kevin@qinnovate.com>"]
repository = "https://github.com/qinnovates/myelin8"

[[bin]]
name = "myelin8"
path = "src/main.rs"

[dependencies]
# Search
tantivy = "0.22"

# Storage
parquet = { version = "53", default-features = false, features = ["zstd", "arrow"] }
arrow = { version = "53", default-features = false, features = ["prettyprint"] }

# Compression
zstd = "0.13"

# Hashing
sha2 = "0.10"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async (MCP server)
tokio = { version = "1", features = ["full"] }

# IDs and time
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Encoding
hex = "0.4"

# File matching
glob = "0.3"

# Utilities
anyhow = "1"
thiserror = "2"
tempfile = "3"
directories = "5"
fs2 = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = true
strip = true
